--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
         "@types/react": "^18.3.21",
         "tsup": "^8.4.0",
         "typescript": "^5.8.3",
-        "vitest": "^1.6.1"
+        "vitest": "^3.1.3"
     },
     "description": "ZeroUI",
     "keywords": [],
     "author": "",
-    "license": "ISC"
+    "license": "MIT"
 }
