--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-    "name": "@zeroui/core",
-    "version": "0.0.1",
-    "private": true,
+    "name": "@archway/zeroui",
+    "version": "0.0.2",
+    "private": false,
     "main": "dist/index.js",
     "module": "dist/index.mjs",
     "types": "dist/index.d.ts",
     "scripts": {
         "build": "tsup src/index.ts --format esm,cjs --dts",
-        "dev": "tsup src/index.ts --format esm,cjs --watch --dts",
-        "test": "vitest"
+        "dev": "tsup src/index.ts --format esm,cjs --watch --dts"
     },
     "dependencies": {
         "@emotion/hash": "^0.9.2",
@@ -23,11 +22,10 @@
         "@testing-library/react": "^15.0.7",
         "@types/react": "^18.3.21",
         "tsup": "^8.4.0",
-        "typescript": "^5.8.3",
-        "vitest": "^3.1.3"
+        "typescript": "^5.8.3"
     },
-    "description": "ZeroUI",
-    "keywords": [],
-    "author": "",
+    "description": "zeroui is a CSS-in-JS and UI Component Library that conforms to zero design",
+    "keywords": ["react", "react-component", "ui", "archway", "zeroui"],
+    "author": "0xbenc",
     "license": "MIT"
 }
