--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
         "zustand": "^4.5.7"
     },
     "peerDependencies": {
-        "react": "^18.3.1",
-        "react-dom": "^18.0.0"
+        "react": ">=18.0.0 || ^19.0.0",
+        "react-dom": ">=18.0.0 || ^19.0.0"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^6.6.3",
