--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "types": "dist/index.d.ts",
     "scripts": {
         "build": "tsup src/index.ts --format esm,cjs --dts",
-        "dev": "tsup src/index.ts --format esm,cjs --watch --dts"
+        "dev": "tsup src/index.ts --format esm,cjs --watch --dts",
+        "styleguide": "styleguidist server",
+        "styleguide:build": "styleguidist build"
     },
     "dependencies": {
         "@emotion/hash": "^0.9.2",
@@ -18,9 +20,16 @@
         "react-dom": ">=18.0.0 || ^19.0.0"
     },
     "devDependencies": {
+        "@babel/core": "^7.27.1",
+        "@babel/preset-env": "^7.27.2",
+        "@babel/preset-react": "^7.27.1",
+        "@babel/preset-typescript": "^7.27.1",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^15.0.7",
         "@types/react": "^18.3.21",
+        "babel-loader": "^10.0.0",
+        "react-docgen-typescript": "^2.2.2",
+        "react-styleguidist": "^13.1.4",
         "tsup": "^8.4.0",
         "typescript": "^5.8.3"
     },
