--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     },
     "dependencies": {
         "@emotion/hash": "^0.9.2",
+        "@iconify/react": "^6.0.0",
         "zustand": "^4.5.7"
     },
     "peerDependencies": {
